--- a/config.json
+++ b/config.json
@@ -12,15 +12,15 @@
   "antiInbox": false,
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-  "nickNameBot": "সমকামী বিরোধী সাসুকে",
+  "nickNameBot": "BeexMan",
   "prefix": "/",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
   },
   "adminBot": [
-    "100063840894133",
-    "100083039411474"
+    "61578353296367",
+    "61578353296367"
   ],
   "whiteListMode": {
     "enable": false,
